<resources>
    <string name="app_name">YourClassBook</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="start">Начать</string>
    <string name="cont">Продолжить</string>
    <string name="FIO">Имя Отчество</string>
    <string name="name_group">Имя Класса</string>
    <string name="enter_name_group">Введите имя класса</string>
    <string name="save_group">Сохранить</string>
    <string name="hint_fot_start">Здравствуйте! Я ваш помощник.</string>
    <string name="hint_for_subject">Преподаваемый предмет</string>
    <string name="enter_fio_student">Введите информацию</string>
    <string name="fio_student">ФИО ученика</string>
    <string name="grade">Оценка</string>

</resources>