<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.MainActivity"
    android:orientation="vertical">


   <androidx.appcompat.widget.LinearLayoutCompat
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="150dp"
       android:gravity="center"
       android:orientation="vertical">


      <ImageView
          android:id="@+id/main_icon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/main_icon" />
   </androidx.appcompat.widget.LinearLayoutCompat>

   <androidx.appcompat.widget.LinearLayoutCompat
       android:layout_width="match_parent"
       android:layout_height="100dp"
       android:gravity="center">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/hint_fot_start"
          android:textColor="@color/black"
          android:textStyle="normal"
          android:gravity="center"
          android:textSize="25sp"/>
   </androidx.appcompat.widget.LinearLayoutCompat>

   <androidx.appcompat.widget.LinearLayoutCompat
       android:layout_width="match_parent"
       android:layout_height="0dip"
       android:layout_weight="1"
       android:gravity="center|bottom"
       android:orientation="horizontal"
       android:layout_marginBottom="70dp"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="10dp">

      <com.google.android.material.button.MaterialButton
          android:id="@+id/button_continue"
          style="@style/Widget.MaterialComponents.Button.OutlinedButton"
          android:layout_width="0dp"
          android:layout_height="50dp"
          android:text="@string/cont"
          android:shape="rectangle"
          android:layout_marginStart="10dp"
          android:textColor="@color/black"
          app:strokeColor="@color/black"
          app:strokeWidth="2dp"
          android:layout_weight="1"/>

      <com.google.android.material.button.MaterialButton
          android:id="@+id/button_start"
          android:layout_width="0dp"
          android:layout_height="50dp"
          app:strokeWidth="2dp"
          android:layout_weight="1"
          android:shape="rectangle"
          android:layout_marginStart="10dp"
          app:strokeColor="@color/black"
          android:text="@string/start"
          android:textColor="@color/black"
          style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>


   </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>