<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.AddNewStudentActivity"
    android:orientation="vertical"
    android:gravity="center">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:layout_marginBottom="40dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_fio_student"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:gravity="center"
            android:textSize="30sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:paddingEnd="20dp"
        android:orientation="vertical"
        android:paddingStart="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name_student_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/fio_student"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_student"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="25sp" />
        </com.google.android.material.textfield.TextInputLayout>



        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_continue"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/save_group"
                android:shape="rectangle"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp"
                android:layout_weight="1"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>